# SigmaHackNSlash

./: CMakeLists.txt  README.md
.github/workflows/: tests.yml
include/: Animation.h  AssetsManager.h  Bullet.h  Collision.h  DEFINITIONS.h  Game.h  GameState.h  HUD.h  InputManager.h  Logger.h  MainMenuState.h  Movement.h  Player.h  SplashState.h  State.h  StateMachine.h  TileMap.h
src/: Animation.cpp  AssetsManager.cpp  Bullet.cpp  CMakeLists.txt  Collision.cpp  Game.cpp  GameState.cpp  HUD.cpp  InputManager.cpp  Logger.cpp  MainMenuState.cpp  Movement.cpp  Player.cpp  SplashState.cpp  StateMachine.cpp  TileMap.cpp
tests/: CMakeLists.txt  README.md  integration_tests.cpp  performance_tests.cpp  test_animation.cpp  test_assets_manager.cpp  test_collision.cpp  test_framework.cpp  test_framework.h  test_input_manager.cpp  test_main.cpp  test_movement.cpp  test_player.cpp  test_tilemap.cpp
